Bug 39348 - Deleted sentences during 'Spelling and Grammar' (F7) when 'Check grammar' box has been activated/deactivated
Summary: Deleted sentences during 'Spelling and Grammar' (F7) when 'Check grammar' box...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Linguistic (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: x86 (IA32) All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-18 11:20 UTC by andre.pietsch
Modified: 2011-12-23 13:23 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
test document (16.07 KB, application/vnd.oasis.opendocument.text)
2011-07-20 20:46 UTC, manj_k
Details
Screenshot 1: 'step_1_en-US.png' (40.44 KB, image/png)
2011-08-19 12:43 UTC, manj_k
Details
Screenshot 2: 'step_2_en-US.png' (55.63 KB, image/png)
2011-08-19 12:44 UTC, manj_k
Details

Note You need to log in before you can comment on or make changes to this bug.
Description andre.pietsch 2011-07-18 11:20:23 UTC
use german hunspell

Create a new doc and paste this text into it 

<snip>
Finanzwesen ...

Plakat

Es ist ein Creuz.
<snap>


Hit F7 to open spell checking dialog.

Deactivate/Activate "Grammatik prüfen"/"Check grammar" flag.

Hit Cancel to close dialog:

Note: The last sentence has been removed!
Comment 1 manj_k 2011-07-20 14:20:04 UTC
Confirmed with LibO 3.4.2 RC1 on WinXP 32b
[LibreOffice 3.4.2 OOO340m1 (Build:201)]

Each sentence with the currently proved (misspelled) word will be deleted, if the box 'Check grammar' has been activated/deactivated during 'Spelling and Grammar' (F7).
(Regardless of closing the 'Spelling and Grammar' dialogue.)

The deleted sentence can be restored by 'Undo'(Ctrl+Z).

Tested with bundled dictionaries German (Germany), French (France), and English (USA).
Tested with/without LanguageTool 1.4.


Caolán, could you please have a look at that?
Comment 2 manj_k 2011-07-20 14:43:00 UTC
@andre.pietsch
Thanks for the bug report.
On which operating system did you find it?
Comment 3 manj_k 2011-07-20 20:46:47 UTC
Created attachment 49358 [details]
test document
Comment 4 manj_k 2011-08-19 05:53:42 UTC
Also reproducible (on WinXP 32b) with, e.g.:
OpenOffice.org 3.3.0
OOO330m20 (Build:9567)

Not reproducible with, e.g.:
OpenOffice.org 3.2.1
OOO320m18 (Build:9502)

Not only a LibreOffice bug.
Comment 5 Caolán McNamara 2011-08-19 06:38:58 UTC
Grammar checking is not related to hunspell FWIW
Comment 6 Caolán McNamara 2011-08-19 08:09:11 UTC
I don't see this. Are you sure it happens without language tool installed, which is the configuration I tried.
Comment 7 Caolán McNamara 2011-08-19 08:16:24 UTC
Maybe this is a windows only thing.

and/or maybe its keyboard focus even. Does it happens when selecting/deselecting options->"check grammar as you type" when using the mouse ? Is that the only option that does it, or do the other make a difference.
Comment 8 manj_k 2011-08-19 12:41:52 UTC
Reproducible with LibO 3.4.3 RC1 (on WinXP)
[LibreOffice 3.4.3 OOO340m1 (Build:301)].

Extension LanguageTool not installed.
Test 'fdo#39348_sample.odt' with text part en-US:

Screenshot 1: 'step_1_en-US.png'
Initial situation <F7>.
Starting with "He heard quiet stepps behind him. [...]".
Option '☐ Check grammar' is disabled (or vice versa).

Screnshot 2: 'step_2_en-US.png'
If the option '☑ Check grammar' is now enabled (or vice versa) with a mouse click, then the sentence "He heard quiet stepps behind him." will be deleted.
'Ctrl+Z' (Undo 'Overwrite: $1') will restore this sentence.
Comment 9 manj_k 2011-08-19 12:43:40 UTC
Created attachment 50383 [details]
Screenshot 1: 'step_1_en-US.png'
Comment 10 manj_k 2011-08-19 12:44:41 UTC
Created attachment 50384 [details]
Screenshot 2: 'step_2_en-US.png'
Comment 11 Caolán McNamara 2011-08-21 08:53:28 UTC
hmm, how come I don't *have* that checkbox.
Comment 12 manj_k 2011-08-21 10:46:00 UTC
This option seems to be a part of the Grammar Checking Framework (GCF).
It will appear for the first time (UI), when a grammar checker (extension) has been installed. Then it will remain, even if the grammar checker has been uninstalled.

[ Tried with:
- Lightproof grammar checker development framework
http://extensions.services.openoffice.org/en/project/lightproof
- LanguageTool
http://www.languagetool.org/ ]
Comment 13 Caolán McNamara 2011-08-22 03:26:07 UTC
gotcha.

I can reproduce this now.
Comment 14 Caolán McNamara 2011-08-22 03:36:23 UTC
Fixed as http://cgit.freedesktop.org/libreoffice/core/commit/?id=63eef1c1cf203aa75093b479a1e8dd24593546e7 for master (i.e. >= 3.5)

Toggling checkbox doesn't delete entire sentence anymore. I wonder if we want this backported for a 3.4.X.
Comment 15 manj_k 2011-09-17 14:04:43 UTC
Verified with
LibO Master - LibO-dev 3.5.0 Build ID: 8cc839d-3dca5fd-4525197
[master~2011-09-12_16.09.34_LibO-Dev_OOO350m1_Win_x86_install_en-US.exe].
Thanks, that works fine. :)
Comment 16 Björn Michaelsen 2011-12-23 13:23:48 UTC
Since all new unconfirmed bugs start in state UNCONFIRMED now and old unconfirmed bugs were moved to NEEDINFO with a explanatory comment, all bugs promoted above those bug states to NEW and later are automatically confirmed making the CONFIRMED whiteboard status redundant. Thus it will be removed.