Resolves: fdo#39348 toggling grammar checkbox deletes sentence